moar reading area

--- a/src/styles/ReadBook.css
+++ b/src/styles/ReadBook.css
@@ -5,9 +5,10 @@
 .pdfControlOverlay {
   display: flex;
   flex-direction: row;
-  width: 50%;
+  width: 100%;
   height: 100%;
   position: absolute;
+  justify-content: space-between;
   top: 0;
   bottom: 0;
   opacity: 0.2;
